[gd_scene load_steps=2 format=3 uid="uid://chai1ar70unnw"]

[ext_resource type="Script" path="res://src/main.gd" id="1"]

[node name="main" type="Node2D"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.5
offset_top = 77.0
offset_right = 206.5
offset_bottom = 187.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Game Title"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -35.0
offset_right = 112.5
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="play" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "MENU_LABEL_PLAY"

[node name="options" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "MENU_OPTIONS"

[node name="controls" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "MENU_OPTIONS_CONTROLS"

[node name="quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "MENU_LABEL_QUIT"

[connection signal="pressed" from="Control/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/options" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/quit" to="." method="_on_quit_pressed"]
